--- a/ui/src/app/shared/labels/edit/labels.edit.component.html
+++ b/ui/src/app/shared/labels/edit/labels.edit.component.html
@@ -59,7 +59,7 @@
                 <nz-form-item>
                     <nz-form-control>
                         <button nz-button nzType="primary" [disabled]="loading" [nzLoading]="loading"
-                                (click)="createLabel()"><i class="plus icon"></i>Add</button>
+                                (click)="createLabel()"><i nz-icon nzType="plus" nzTheme="outline"></i>Add</button>
                     </nz-form-control>
                 </nz-form-item>
             </nz-col>
