--- a/ui/src/app/shared/workflow/wizard/node-add/node.wizard.html
+++ b/ui/src/app/shared/workflow/wizard/node-add/node.wizard.html
@@ -31,7 +31,7 @@
                                         <nz-form-label>
                                             <a href="#" [routerLink]="['/docs', 'docs', 'workflow', 'mutex']" target="_blank" rel="noopener noreferrer">
                                                 {{ 'workflow_root_context_mutex' | translate }}
-                                                <i class="external icon"></i>
+                                                <span nz-icon nzType="link" nzTheme="outline"></span>
                                             </a>
                                         </nz-form-label>
                                         <nz-form-control>
@@ -58,7 +58,7 @@
                                         <nz-form-label>
                                             <a href="#" [routerLink]="['/docs', 'docs', 'workflow', 'mutex']" target="_blank" rel="noopener noreferrer">
                                                 {{ 'workflow_root_context_mutex' | translate }}
-                                                <i class="external icon"></i>
+                                                <span nz-icon nzType="link" nzTheme="outline"></span>
                                             </a>
                                         </nz-form-label>
                                         <nz-form-control>
