--- a/ui/src/app/views/application/show/admin/repository/application.repo.html
+++ b/ui/src/app/views/application/show/admin/repository/application.repo.html
@@ -58,7 +58,7 @@
             <ng-template #repoTemp>
                 <div nz-row class="alert">
                     <div nz-col [nzSpan]="2">
-                        <i class="warning sign icon"></i>
+                        <i nz-icon nzType="warning" nzTheme="fill" class="orange"></i>
                     </div>
                     <div nz-col [nzSpan]="22">
                         <div class="header">Missing configuration</div>
