--- a/ui/src/app/views/home/home.html
+++ b/ui/src/app/views/home/home.html
@@ -19,10 +19,10 @@
         <nz-col nzOffset="1" nzSpan="6" class="link">
             <div>
                 <button nz-button nzBlock nzType="primary" href="https://ovh.github.io/cds" target="_blank" rel="noopener noreferrer">
-                    <i class="book icon"></i>Guide
+                    <i nz-icon nzType="book" nzTheme="outline"></i>Guide
                 </button>
                 <button nz-button nzBlock nzType="primary" [routerLink]="['/favorite']">
-                    <i class="book icon"></i>Bookmarks
+                    <i nz-icon nzType="book" nzTheme="outline"></i>Bookmarks
                 </button>
             </div>
             <div>
