--- a/ui/src/app/views/pipeline/show/ascode-editor/pipeline.ascode.editor.html
+++ b/ui/src/app/views/pipeline/show/ascode-editor/pipeline.ascode.editor.html
@@ -21,7 +21,7 @@
 
             <nz-col [nzSpan]="11" [nzOffset]="2">
                 <button nz-button nzBlock nzDanger nzType="primary" name="cancelbtn" [disabled]="loading" [nzLoading]="loading" (click)="cancel()">
-                    <i class="remove icon"></i>Cancel
+                    <span nz-icon nzType="close" nzTheme="outline"></span>Cancel
                 </button>
             </nz-col>
         </nz-row>
