--- a/ui/src/app/views/project/show/project.html
+++ b/ui/src/app/views/project/show/project.html
@@ -1,5 +1,5 @@
 <ng-template #tabPermissionTemplate>
-    <i [ngClass]="['users', 'icon']"></i>
+    <span nz-icon nzType="user-switch" nzTheme="outline"></span>
     Permissions
     <ng-template #warnPermission>
         Following groups that are not from organization "{{project.organization}}" can read the
