--- a/ui/src/app/views/project/show/integrations/list/project.integration.list.scss
+++ b/ui/src/app/views/project/show/integrations/list/project.integration.list.scss
@@ -1,3 +1,9 @@
+@import '../../../../../../common.scss';
 i {
   margin-left: 5px;
+  font-size: 1.2em;
+}
+
+.green {
+  color: $cds_color_green;
 }
