--- a/ui/src/app/views/project/show/project.scss
+++ b/ui/src/app/views/project/show/project.scss
@@ -8,23 +8,27 @@
 
   i {
     &.favorite {
-      color: $cds_favorite_color;
-      font-size: 1.3em;
       &:hover {
         opacity: 0.4;
       }
     }
     &.unfavorite {
-      color: black;
-      opacity: 0.3;
-      font-size: 1.3em;
       &:hover {
         color: $cds_favorite_color;
       }
     }
   }
+  i.orange {
+    color: $cds_color_orange;
+  }
   nz-spin {
     margin-top: 30px;
   }
+}
+
+.star {
+  cursor: pointer;
+  margin-left: 15px;
+  font-size: 1.3em;
 }
 
