--- a/ui/src/app/views/project/show/workflow/blocs/workflow.list.blocs.scss
+++ b/ui/src/app/views/project/show/workflow/blocs/workflow.list.blocs.scss
@@ -47,3 +47,11 @@ nz-list {
 .footer {
   height: 15px;
 }
+
+.round {
+  width: 16px;
+  height: 16px;
+  display: inline-flex;
+  border-radius: 8px;
+  margin-right: 5px;
+}
