--- a/ui/src/app/views/workflow/run/node/pipeline/workflow-run-job/workflow-run-job.scss
+++ b/ui/src/app/views/workflow/run/node/pipeline/workflow-run-job/workflow-run-job.scss
@@ -189,6 +189,11 @@
                         color: #dddddd !important;
                     }
                 }
+
+              i {
+                margin-right: 5px;
+                font-size: 1.4em;
+              }
             }
         }
     }
