--- a/ui/src/app/views/workflow/run/workflow.run.html
+++ b/ui/src/app/views/workflow/run/workflow.run.html
@@ -87,7 +87,7 @@
                     {{'workflow_run_scheduling' | translate }}
                 </ng-container>
                 <div *ngIf="runDelayed">
-                    <i class="hourglass half icon"></i>
+                    <i nz-icon nzType="hourglass" nzTheme="outline"></i>
                     {{'workflow_run_delayed' | translate }}
                 </div>
             </div>
