--- a/ui/src/app/views/workflowv3/resizable-panel/resizable-panel.scss
+++ b/ui/src/app/views/workflowv3/resizable-panel/resizable-panel.scss
@@ -14,7 +14,8 @@
             flex-direction: row;
 
             i {
-                margin-left: 2px;
+                margin-left: -6px;
+                font-size:1.4em;
             }
         }
 
@@ -35,7 +36,8 @@
             flex-direction: column;
 
             i {
-                margin-top: -4px;
+                margin-top: -5px;
+                font-size:1.4em;
             }
         }
 
