--- a/ui/src/app/views/workflowv3/graph/workflowv3-stages-graph.html
+++ b/ui/src/app/views/workflowv3/graph/workflowv3-stages-graph.html
@@ -1,11 +1,11 @@
 <div class="svg-wrapper" #svgGraph>
     <div class="controls">
         <button nz-button (click)="changeDirection()" nzSize="large">
-            <i class="resize icon" [class.vertical]="direction === 'vertical'"
-                [class.horizontal]="direction === 'horizontal'"></i>
+            <span *ngIf="direction === 'horizontal'">↔</span>
+            <span *ngIf="direction === 'vertical'">↕</span>
         </button>
         <button nz-button (click)="clickOrigin()" nzSize="large">
-            <i class="crosshairs icon"></i>
+            ⌖
         </button>
     </div>
 </div>
