--- a/ui/src/app/views/workflowv3/resizable-panel/resizable-panel.html
+++ b/ui/src/app/views/workflowv3/resizable-panel/resizable-panel.html
@@ -1,8 +1,8 @@
 <div class="panel" [class.horizontal]="this.direction === 'horizontal'"
     [class.vertical]="this.direction === 'vertical'">
     <div class="grabber" (mousedown)="onMouseDownGrabber()" #grabber>
-        <i *ngIf="this.direction === 'horizontal'" class="ellipsis vertical icon"></i>
-        <i *ngIf="this.direction === 'vertical'" class="ellipsis horizontal icon"></i>
+        <i *ngIf="this.direction === 'horizontal'" nz-icon nzType="more" nzTheme="outline"></i>
+        <i *ngIf="this.direction === 'vertical'" nz-icon nzType="ellipsis" nzTheme="outline"></i>
     </div>
     <div class="content" [class.disableSelection]="grabbing" #content>
         <ng-content></ng-content>
