--- a/ui/src/app/views/workflowv3/run/workflowv3-run-job.html
+++ b/ui/src/app/views/workflowv3/run/workflowv3-run-job.html
@@ -1,6 +1,6 @@
 <app-tabs [tabs]="tabs" (onSelect)="selectTab($event)" [disableNavigation]="true"></app-tabs>
 <div class="close" (click)="clickClose()">
-    <i class="close icon"></i>
+    <span nz-icon nzType="close" nzTheme="outline"></span>
 </div>
 <app-workflow-run-job *ngIf="selectedTab.key === 'logs' && selectedNodeJobRun" [projectKey]="projectKey"
     [workflowName]="workflowName" [workflowRunNumber]="workflowRunNum" [nodeJobRun]="selectedNodeJobRun"
